# saya_char_qwen2.5

./: main.py  pyproject.toml  requirements.txt
docs/: branching-strategy.md
models/qwen/: cache.py  config.py  tokenization.py
models/qwen/layers/: attention.py  mlp.py  rotary.py
models/style_bert_vits2/saya_tts/: config.py
models/style_bert_vits2/saya_tts/bert/: bert_model.py
