[project]
name = "saya-char-qwen2-5"
version = "0.1.0"
description = "Qwen2 architecture study & custom implementation"
requires-python = ">=3.10,<3.12"

dependencies = [
    "transformers>=4.40",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "einops>=0.7",
    "sentencepiece",
    "numpy",
    "typing-extensions",
]